feat: Change wallpaper link

--- a/index.html
+++ b/index.html
@@ -100,9 +100,9 @@
             src="icons/laptop.svg" />Meu Setup</a>
         <br />
 
-        <!-- Wallpaper -->
-        <a class="button button-wallpaper" target="_blank" href="https://wallhaven.cc/w/lm87rq"><img class="icon"
-            src="icons/wallpaper.svg" />Wallpaper</a>
+        <!-- Wallpapers -->
+        <a class="button button-wallpaper" target="_blank" href="https://ibb.co/album/pJTFqF"><img class="icon"
+            src="icons/wallpaper.svg" />Wallpapers</a>
         <br />
 
         <!-- Instagram -->
